Fixed heading spacing

--- a/_pgbackup/css/style_1681566661.css
+++ b/_pgbackup/css/style_1681566661.css
@@ -53,15 +53,9 @@
     z-index: 100000;
 }
 
-.layout__x-padding {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
 .drop-shadow {
     filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
 }
-
 
 /* * 4.0 Headers
 ------------------------------------------------------------ */
@@ -73,9 +67,7 @@
     grid-template-areas: 'logo mobile-menu' 'main-menu main-menu';
     padding-top: 1rem;
     padding-bottom: 1rem;
-
     column-gap: 1rem;
-
     row-gap: 0.5rem;
     z-index: 999;
     position: relative;
@@ -86,10 +78,9 @@
         display: grid;
         grid-template-columns: fit-content(30%) 1fr auto;
         grid-template-rows: auto;
-        grid-template-areas: 'logo mobile-menu main-menu';
+        grid-template-areas: 'logo main-menu mobile-menu';
         padding-top: 1rem;
         padding-bottom: 1rem;
-
         gap: 1rem;
     }
 }
@@ -401,4 +392,3 @@ header h1 {
     padding: 0rem 1rem 1rem 1rem;
     z-index: 999;
 }
-
