--- a/_pgbackup/css/style_1681566890.css
+++ b/_pgbackup/css/style_1681566890.css
@@ -73,9 +73,7 @@
     grid-template-areas: 'logo mobile-menu' 'main-menu main-menu';
     padding-top: 1rem;
     padding-bottom: 1rem;
-
     column-gap: 1rem;
-
     row-gap: 0.5rem;
     z-index: 999;
     position: relative;
@@ -86,10 +84,9 @@
         display: grid;
         grid-template-columns: fit-content(30%) 1fr auto;
         grid-template-rows: auto;
-        grid-template-areas: 'logo mobile-menu main-menu';
+        grid-template-areas: 'logo main-menu mobile-menu';
         padding-top: 1rem;
         padding-bottom: 1rem;
-
         gap: 1rem;
     }
 }
